# ugawrf

./: .gitignore  LICENSE  README.md  skewt.py  special.py  textgen.py  ugawrf.py
image/: ugawrf.py
script/: .fuse_hidden00001fa300000001  .~lock.verified_ahn_model_stats_2026-01-24_12_00_00.csv#  comparer.py  download_wrfout.sh  forecastloop.py  meteogram.py  modelstats.py  pyproject.toml  skewt.py  special.py  textgen.py  ugawrf.py  weathermaps.py
site/: calendar.html  index.html  script.js  style.css  uga-wrf-club.txt
site/runs/: list.json
site/runs/2025-03-13_21_00_00/text/ahn/: forecast.txt
site/runs/2025-03-13_21_00_00/text/atl/: forecast.txt
site/runs/2025-03-13_21_00_00/text/bmx/: forecast.txt
site/runs/2025-03-13_21_00_00/text/cni/: forecast.txt
site/runs/2025-03-13_21_00_00/text/csg/: forecast.txt
site/runs/2025-03-13_21_00_00/text/ffc/: forecast.txt
site/runs/2025-03-13_21_00_00/text/gsp/: forecast.txt
site/runs/2025-03-13_21_00_00/text/mcn/: forecast.txt
site/runs/2025-03-13_21_00_00/text/ohx/: forecast.txt
site/runs/2025-03-13_21_00_00/text/rmg/: forecast.txt
